Replaced internal base64 encoder
Task: ISPS-133
Change-Id: I455ec9eeb661c4303042abb65b585758b25405b2